add prod database and limited gmail access

--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -20,10 +20,10 @@ spring:
             enabled: false
     datasource:
         driver-class-name: org.postgresql.ds.PGSimpleDataSource
-        url: jdbc:postgresql://localhost:5432/agileim
+        url: jdbc:postgresql://contezi.ro:5432/agileimprod
         name:
-        username: agileim
-        password:
+        username: agileimprod
+        password: agileim
     jpa:
         database-platform: com.meetup.agileim.domain.util.FixedPostgreSQL82Dialect
         database: POSTGRESQL
@@ -34,7 +34,7 @@ spring:
             hibernate.generate_statistics: false
             hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
     mail:
-        host: localhost
+        host: aspmx.l.google.com
         port: 25
         username:
         password:
