--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -35,7 +35,10 @@ spring:
             hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
             hibernate.hbm2ddl.auto: update
     mail:
-        host: localhost
+        host: aspmx.l.google.com
+        port: 25
+        username:
+        password:
     messages:
         cache-seconds: 1
     thymeleaf:
